add new alert message

--- a/frontend/src/style/Alert.css
+++ b/frontend/src/style/Alert.css
@@ -2,9 +2,9 @@
     position: relative;
     width: 100%;
     max-width: 500px;
-    margin: 20px auto;
-    padding: 15px;
-    background-color: #f8d7da;
+    margin: 10px auto;
+    padding: 10px;
+    background-color: #fcf8f8;
     border: 1px solid #f5c6cb;
     border-radius: 4px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
